v0.1.0 fix: font size landing page on mobile

--- a/mosaic-website/src/components/sections/Landing/Landing.css
+++ b/mosaic-website/src/components/sections/Landing/Landing.css
@@ -6,21 +6,22 @@
   position: relative;
 }
 
-.hero-text {
-  /* position: sticky;
-  top: 50vh; */
-  position: absolute;
-  color: white;
 
+
+
+.hero-text {
+  color: white;
   z-index: 3;
+  top: 50%;
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); 
   width: 80%;
   text-align: center;
   /* background: linear-gradient(to left, rgba(0,0,0,0) 0%, rgb(35, 35, 35) 100%); */
 }
+
 
 .hero-subheading {
   width: 60%;
@@ -38,6 +39,21 @@
 .hero-subheading p {
   margin: 0px;
   font-size: 35px;
+}
+
+@media screen and (max-width: 769px) {
+  .hero-text {
+    top: 20%;
+  }
+
+  .hero-heading h1 {
+    font-size: 50px;
+  }
+
+  .hero-subheading p {
+    margin: 0px;
+    font-size: 25px;
+  }
 }
 
 .slide-container {
